# flowgger

./: Cargo.toml  flowgger.toml
docker/: Dockerfile
src/: main.rs
src/flowgger/encoder/: gelf_encoder.rs
src/flowgger/input/tls/: mod.rs  tls_input.rs
src/flowgger/output/: kafka_output.rs  tls_output.rs
