cargo-features = ["edition"]

[package]
edition = "2018"
name = "flowgger"
version = "0.3.1"
authors = ["Frank Denis <github@pureftpd.org>", "Cedric Dumay <cedric.dumay@gmail.com>"]
build = "build.rs"

[features]
capnp-recompile = ["capnpc"]
coroutines = ["coio"]
kafka = ["rdkafka"]

default = ["kafka"]

[build-dependencies.capnpc]
version = "*"
optional = true

[dependencies]
capnp = "*"
chrono = "*"
clap = "*"
flate2 = "*"
log = "*"
rand = "*"
redis = "*"
serde = "~0.8"
serde_json = "~0.8"
toml = "~0.2"
env_logger = "0.6"
futures = "0.1"

[dependencies.coio]
git = "https://github.com/zonyitoo/coio-rs"
optional = true

[dependencies.rdkafka]
git = "https://github.com/fede1024/rust-rdkafka"
features = ["ssl", "sasl", "dynamic_linking"]
optional = true

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = "abort"
